Cleanup
- Remove unused plugins.
- Remove cli/sbt projects
- use buildinfo instead of custom stuff